# deno-multiple-isolates-per-thread

./: Cargo.toml
src/: main.rs  main_classic.js  main_tla.js
