[package]
name = "multiple-isolates-per-thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tla = []

[dependencies]
deno_runtime = "0.40.0"
once_cell = "1.9.0"
tokio = { version = "1.15.0", features = ["rt", "macros"] }